--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,8 @@ a {
 ::-webkit-scrollbar-thumb:hover {
     background: #001a66;
 }
+
+//*
+::-webkit-scrollbar-thumb:hover {
+    background: #001a66;
+}
